<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A35"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text"
            style="@style/trivia_style"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/light_gray_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="377dp"
            android:layout_height="190dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#445498"
            android:elevation="200dp"
            app:cardCornerRadius="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="355dp"
                android:layout_height="96dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="@dimen/question_text_padding"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/buttonstyle"
            android:layout_width="366dp"
            android:layout_height="59dp"
            android:layout_margin="@dimen/layout_margin"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#751035"
            android:text="@string/true_button"
            android:textColor="#00BFA5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/button_false"
            style="@style/buttonstyle"
            android:layout_width="368dp"
            android:layout_height="56dp"
            android:layout_margin="@dimen/layout_margin"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#751035"
            android:text="@string/false_button"
            android:textColor="#00BFA5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <Button
            android:id="@+id/button_next"
            style="@style/buttonstyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="@dimen/layout_margin"
            android:layout_marginTop="8dp"
            android:backgroundTint="#751035"
            android:text="@string/next_button"
            android:textColor="#00BFA5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.899"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="174dp"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_out_of"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/highscore_text"
            android:layout_width="197dp"
            android:layout_height="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/score_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toEndOf="@+id/title_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>